--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@types/express": "^4.17.13",
     "express": "^4.17.1",
     "knex": "^0.95.11",
     "node-schedule": "^2.0.0",
@@ -8,10 +7,11 @@
   },
   "name": "fastapi-advanced-permission",
   "description": "Advanced Permission Controller for Fast Api Express",
-  "version": "1.0.0",
+  "version": "1.1.6",
   "main": "build/index",
   "types": "build/index.d",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/knex": "^0.16.1",
     "@types/node": "^16.7.13",
     "@types/uuid": "^8.3.1",
@@ -19,7 +19,8 @@
     "@typescript-eslint/parser": "^4.31.0",
     "rimraf": "^3.0.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "ver--1": "^0.1.19"
   },
   "scripts": {
     "build": "rimraf ./build && tsc"
